--- a/meta.css
+++ b/meta.css
@@ -1,3 +1,221 @@
+.head {
+  background-color: rgb(255, 241, 241);
+  position: absolute;
+  z-index: 1;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  margin-top: 10px;
+  width: 160px;
+  height: 30px;
+  margin-left: 1300px;
+  padding-left: 10px;
+  padding-bottom: 5px;
+  color: rgb(189, 192, 198);
+  border: solid 3px black;
+}
 
+.div-blur {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.img {
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: 100%;
+}
+
+.div-to {
+  position: absolute;
+}
+
+.booklium {
+  width: 1100px;
+  height: 700px;
+  margin-top: -540px;
+  margin-left: 170px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  box-shadow: 10px 10px 20px 2px rgba(0, 0, 0, 0.5);
+}
+
+.div-unnamed {
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+}
+
+.unnamed {
+  width: 400px;
+  height: 550px;
+  margin-top: -550px;
+  margin-left: 1000px;
+  border-radius: 30px;
+  box-shadow: 10px 10px 20px 2px rgba(0, 0, 0, 0.5);
+}
+
+.label-in {
+  color: rgb(255, 255, 255);
+  position: absolute;
+  margin-top: -250px;
+  margin-left: 1000px;
+}
+
+.input-in {
+  background-color: rgb(255, 255, 255);
+  z-index: 1;
+  margin-top: -200px;
+  margin-left: 1200px;
+  position: absolute;
+  border: solid 3px rgb(239, 239, 163);
+}
+
+.label-on {
+  color: rgb(255, 255, 255);
+  position: absolute;
+  margin-top: -150px;
+  margin-left: 1000px;
+}
+
+.input-on {
+  background-color: rgb(255, 255, 255);
+  z-index: 1;
+  margin-top: -100px;
+  margin-left: 1200px;
+  position: absolute;
+  border: solid 3px rgb(239, 239, 163);
+}
+
+.div-blur2 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin-top: 170px;
+}
+
+.div-black {
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 550px;
+  width: 1000px;
+  position: absolute;
+  margin-top: -600px;
+  margin-left: 230px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  box-shadow: 10px;
+}
+
+.form {
+  width: 250px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -350px;
+  margin-left: 250px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.to {
+  width: 250px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -369px;
+  margin-left: 530px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.departing {
+  width: 150px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -310px;
+  margin-left: 250px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.returning {
+  width: 150px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -328px;
+  margin-left: 420px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.room {
+  width: 30px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -346px;
+  margin-left: 590px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.adults {
+  width: 45px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -364px;
+  margin-left: 640px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.child {
+  width: 55px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -382px;
+  margin-left: 705px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.coach {
+  width: 100px;
+  height: 33px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -268px;
+  margin-left: 250px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.search {
+  width: 70px;
+  height: 70px;
+  background-color: #ef0054;
+  position: absolute;
+  margin-top: -310px;
+  margin-left: 920px;
+  color: rgb(255, 255, 255);
+  padding-left: 10px;
+  border-color: black;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
 
 /*# sourceMappingURL=meta.css.map */
