--- a/meta.css
+++ b/meta.css
@@ -1,5 +1,5 @@
 .head {
-  background-color: rgb(255, 241, 241);
+  background-color: rgb(41, 76, 112);
   position: absolute;
   z-index: 1;
   border-radius: 30px;
@@ -15,6 +15,18 @@
   padding-bottom: 5px;
   color: rgb(189, 192, 198);
   border: solid 3px black;
+}
+
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(5, 21, 63);
+  z-index: 1;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 .div-blur {
