--- a/hotel.scss
+++ b/hotel.scss
@@ -1,5 +1,5 @@
 .head{
-    background-color: rgb(41, 76, 112);
+    background-color: rgb(255, 255, 255);
     position: absolute;
     z-index: 1;
     border-radius: 30px;
@@ -8,12 +8,12 @@
     -ms-border-radius: 30px;
     -o-border-radius: 30px;
     margin-top: 10px;
-    width: 160px;
+    width: 100px;
     height: 30px;
-    margin-left: 1300px;
-    padding-left:  10px;
+    margin-left: 1350px;
+    padding-left:  25px;
    padding-bottom: 5px;
-color: rgb(189, 192, 198);
+color: rgb(0, 0, 0);
 border: solid 3px black;
 
 }
@@ -231,4 +231,25 @@ height: 100%;
     -moz-border-radius:5px ;
     -ms-border-radius:5px ;
     -o-border-radius:5px ;
+}
+.end{
+    width: 100%;
+    min-height: 100vh;
+    margin-top: -250px;
+    background-color: rgb(164, 193, 254);
+
+}
+.div-end{
+    width: 100%;
+    height: 300px;
+    background-color: #86abff;
+    box-shadow: 200px;
+}
+.span-book{
+position: absolute;
+margin-top: -400px;
+}
+.span-from{
+    position: absolute;
+    margin-top: -400px;
 }
