--- a/hotel.scss
+++ b/hotel.scss
@@ -1,4 +1,4 @@
-$margin-t:100px:
+
 
 
 
@@ -259,4 +259,19 @@ margin-top: -400px;
 .span-from{
     position: absolute;
     margin-top: -400px;
+}
+.du{
+
+}
+.pa{
+
+}
+.is{
+
+}
+.ca{
+
+}
+.la{
+
 }
