--- a/hotel.scss
+++ b/hotel.scss
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 .head{
     background-color: rgb(255, 255, 255);
     position: absolute;
@@ -261,17 +254,43 @@ margin-top: -400px;
     margin-top: -400px;
 }
 .du{
-
-}
-.pa{
-
+    position: absolute;
+  width: 500px;
+  height: 200px;
+  margin-top: -450px;
+  margin-left: 150px;
 }
 .is{
-
+    position: absolute;
+    margin-left: 800px;
+    margin-top: -450px;
+  height: 200px;
+width: 500px;
 }
 .ca{
-
+    position: absolute;
+    width: 400px;
+    height: 200px;
+    margin-top: -200px;
+    margin-left: 50px;
+  
 }
 .la{
-
+    
+    position: absolute;
+    width: 400px;
+    height: 200px;
+    margin-top: -200px;
+    margin-left: 530px;
+  
+  
+}
+.pa{
+    
+    position: absolute;
+    width: 400px;
+    height: 200px;
+    margin-top: -200px;
+    margin-left: 1000px;
+  
 }
