--- a/meta.css
+++ b/meta.css
@@ -1,17 +1,297 @@
-/* Error: expected ";".
- *   ,
- * 1 | $margin-top:margin-top:
- *   |                       ^
- *   '
- *   hotel.scss 1:23  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected ";".\a   \2577 \a 1 \2502  $margin-top:margin-top:\d\a   \2502                        ^\a   \2575 \a   hotel.scss 1:23  root stylesheet';
+.head {
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  z-index: 1;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  margin-top: 10px;
+  width: 100px;
+  height: 30px;
+  margin-left: 1350px;
+  padding-left: 25px;
+  padding-bottom: 5px;
+  color: rgb(0, 0, 0);
+  border: solid 3px black;
 }
+
+.header {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(5, 21, 63);
+  z-index: 1;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.div-blur {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.img {
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: 100%;
+}
+
+.div-to {
+  position: absolute;
+}
+
+.booklium {
+  width: 1100px;
+  height: 700px;
+  margin-top: -540px;
+  margin-left: 170px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  box-shadow: 10px 10px 20px 2px rgba(0, 0, 0, 0.5);
+}
+
+.div-unnamed {
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+}
+
+.unnamed {
+  width: 400px;
+  height: 550px;
+  margin-top: -550px;
+  margin-left: 1000px;
+  border-radius: 30px;
+  box-shadow: 10px 10px 20px 2px rgba(0, 0, 0, 0.5);
+}
+
+.label-in {
+  color: rgb(255, 255, 255);
+  position: absolute;
+  margin-top: -250px;
+  margin-left: 1000px;
+}
+
+.input-in {
+  background-color: rgb(255, 255, 255);
+  z-index: 1;
+  margin-top: -200px;
+  margin-left: 1200px;
+  position: absolute;
+  border: solid 3px rgb(239, 239, 163);
+}
+
+.label-on {
+  color: rgb(255, 255, 255);
+  position: absolute;
+  margin-top: -150px;
+  margin-left: 1000px;
+}
+
+.input-on {
+  background-color: rgb(255, 255, 255);
+  z-index: 1;
+  margin-top: -100px;
+  margin-left: 1200px;
+  position: absolute;
+  border: solid 3px rgb(239, 239, 163);
+}
+
+.div-blur2 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin-top: 170px;
+}
+
+.div-black {
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 550px;
+  width: 1000px;
+  position: absolute;
+  margin-top: -600px;
+  margin-left: 230px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+  box-shadow: 10px;
+}
+
+.form {
+  width: 250px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -350px;
+  margin-left: 250px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.to {
+  width: 250px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -369px;
+  margin-left: 530px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.departing {
+  width: 150px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -310px;
+  margin-left: 250px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.returning {
+  width: 150px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -328px;
+  margin-left: 420px;
+  color: gray;
+  padding-left: 10px;
+}
+
+.room {
+  width: 30px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -346px;
+  margin-left: 590px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.adults {
+  width: 45px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -364px;
+  margin-left: 640px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.child {
+  width: 55px;
+  height: 40px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -382px;
+  margin-left: 705px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.coach {
+  width: 100px;
+  height: 33px;
+  background-color: #fcfeff;
+  position: absolute;
+  margin-top: -268px;
+  margin-left: 250px;
+  color: rgb(13, 10, 10);
+  padding-left: 10px;
+}
+
+.search {
+  width: 70px;
+  height: 70px;
+  background-color: #ef0054;
+  position: absolute;
+  margin-top: -310px;
+  margin-left: 920px;
+  color: rgb(255, 255, 255);
+  padding-left: 10px;
+  border-color: black;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.end {
+  width: 100%;
+  min-height: 100vh;
+  margin-top: -250px;
+  background-color: rgb(164, 193, 254);
+}
+
+.div-end {
+  width: 100%;
+  height: 250px;
+  background-color: #86abff;
+  box-shadow: 200px;
+}
+
+.span-book {
+  position: absolute;
+  margin-top: -400px;
+}
+
+.span-from {
+  position: absolute;
+  margin-top: -400px;
+}
+
+.du {
+  position: absolute;
+  width: 500px;
+  height: 200px;
+  margin-top: -450px;
+  margin-left: 150px;
+}
+
+.is {
+  position: absolute;
+  margin-left: 800px;
+  margin-top: -450px;
+  height: 200px;
+  width: 500px;
+}
+
+.ca {
+  position: absolute;
+  width: 400px;
+  height: 200px;
+  margin-top: -200px;
+  margin-left: 50px;
+}
+
+.la {
+  position: absolute;
+  width: 400px;
+  height: 200px;
+  margin-top: -200px;
+  margin-left: 530px;
+}
+
+.pa {
+  position: absolute;
+  width: 400px;
+  height: 200px;
+  margin-top: -200px;
+  margin-left: 1000px;
+}
+
+/*# sourceMappingURL=meta.css.map */
