--- a/meta.css
+++ b/meta.css
@@ -7,7 +7,7 @@
   -moz-border-radius: 30px;
   -ms-border-radius: 30px;
   -o-border-radius: 30px;
-  margin-top: 10px;
+  margin-top: 50px;
   width: 100px;
   height: 30px;
   margin-left: 1350px;
@@ -33,6 +33,16 @@
   width: 100%;
   height: 100%;
   position: relative;
+}
+
+.span-head:hover {
+  background-color: #3e4d6d;
+  padding: 5px 10px;
+  transition: 1s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 1s;
+  -ms-transition: 1s;
+  -o-transition: 1s;
 }
 
 .img {
@@ -74,15 +84,15 @@
 .label-in {
   color: rgb(255, 255, 255);
   position: absolute;
-  margin-top: -250px;
-  margin-left: 1000px;
+  margin-top: -180px;
+  margin-left: 1040px;
+  font-size: 20px;
 }
 
 .input-in {
   background-color: rgb(255, 255, 255);
-  z-index: 1;
-  margin-top: -200px;
-  margin-left: 1200px;
+  margin-top: -180px;
+  margin-left: 1130px;
   position: absolute;
   border: solid 3px rgb(239, 239, 163);
 }
@@ -90,15 +100,15 @@
 .label-on {
   color: rgb(255, 255, 255);
   position: absolute;
-  margin-top: -150px;
-  margin-left: 1000px;
+  margin-top: -100px;
+  margin-left: 1040px;
+  font-size: 20px;
 }
 
 .input-on {
   background-color: rgb(255, 255, 255);
-  z-index: 1;
   margin-top: -100px;
-  margin-left: 1200px;
+  margin-left: 1130px;
   position: absolute;
   border: solid 3px rgb(239, 239, 163);
 }
@@ -141,7 +151,7 @@
   height: 40px;
   background-color: #fcfeff;
   position: absolute;
-  margin-top: -369px;
+  margin-top: -374px;
   margin-left: 530px;
   color: gray;
   padding-left: 10px;
