--- a/hotel.scss
+++ b/hotel.scss
@@ -210,12 +210,12 @@ height: 100%;
 
 }
 .coach{
-    width: 100px;
+    width: 150px;
     height: 33px;
     background-color: #fcfeff;
     position: absolute;
-    margin-top: -278px;
-    margin-left: 250px;
+    margin-top: -308px;
+    margin-left: 400px;
     color: rgb(13, 10, 10);
     padding-left: 10px;
 
@@ -225,16 +225,17 @@ height: 100%;
     height: 70px;
     background-color: #ef0054;
     position: absolute;
-    margin-top: -310px;
-    margin-left: 920px;
+    margin-top: -360px;
+    margin-left: 870px;
     color: rgb(255, 255, 255);
-    padding-left: 10px;
+    padding-left: 5px;
     border-color: black;
     border-radius:5px ;
     -webkit-border-radius:5px ;
     -moz-border-radius:5px ;
     -ms-border-radius:5px ;
     -o-border-radius:5px ;
+    padding-top: -5px;
 }
 .end{
     width: 100%;
@@ -251,11 +252,14 @@ height: 100%;
 }
 .span-book{
 position: absolute;
-margin-top: -400px;
+margin-top: -200px;
+margin-left: 20px;
 }
 .span-from{
     position: absolute;
-    margin-top: -400px;
+    margin-top: -180px;
+    margin-left: 20px;
+
 }
 .du{
     position: absolute;
