--- a/hotel.scss
+++ b/hotel.scss
@@ -268,6 +268,7 @@ margin-left: 20px;
   margin-top: -450px;
   margin-left: 150px;
 }
+
 .is{
     position: absolute;
     margin-left: 800px;
@@ -283,7 +284,8 @@ width: 500px;
     margin-left: 50px;
   
 }
-.la{
+
+.lo{
     
     position: absolute;
     width: 400px;
